<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">SimpleNews</string>
    <string name="action_settings">Settings</string>
    <string name="about_ok">OK</string>
    <string name="ok">OK</string>
    <string name="changelog_title">Changelog</string>
    <string name="changelog_menu">Changelog</string>
    <string name="progress">Progress</string>
    <string name="refresh">Refresh</string>
    <string name="update_news">Updating news…</string>
    <string name="coming_soon">Coming soon…</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="categories">Categories</string>
    <string name="pref_config">Color Picker</string>
    <string name="new_category">New Category</string>
    <string name="add">Add</string>
    <string name="description_refresh">Refresh</string>

    <plurals name="countdown_seconds">
        <item quantity="one">Removing in 1…</item>
        <item quantity="other">Removing in %d…</item>
    </plurals>

    <string name="countdown_dismissing">Removing</string>
    <string name="itemdeleted">Item deleted</string>
    <string name="taptoundo">Tap to undo</string>
    <string name="select_color_create_category">Select Color for Category</string>
    <string name="create_category_2_2">Create Category 2 / 2</string>
    <string name="create_category_1_2" tools:ignore="TypographyFractions">Create Category 1 / 2</string>
    <string name="not_valid_format">Address not valid - XML/RSS-Format required.</string>
    <string name="category_add">Select Category to add Feed</string>
    <string name="cancel">Cancel</string>
    <string name="submit">@android:string/ok</string>
    <string name="name_of_category">Name for the Category</string>
    <string name="new_name">New name: %s</string>
    <string name="rename">Rename</string>
    <string name="category">Category</string>
    <string name="change_category_name">Change the name of the category</string>
    <string name="category_created">Category created</string>
    <string name="rename_feed">Rename Feed</string>
    <string name="new_feed_url_header">New Feed Url</string>
    <string name="simple_news_title">News</string>
    <string name="categories_title"><![CDATA[Categories]]></string>
    <string name="cancel_menu">Cancel</string>
    <string name="hint_add_entry">Insert Address</string>
    <string name="rate_my_app_desc">If you enjoy using %s, please take a moment to rate the app. Thank you for your support!</string>
    <string name="rate_my_app_title">Rate %s</string>
    <string name="rate_my_app_now">Rate Now</string>
    <string name="rate_my_app_later">Later</string>
    <string name="rate_my_app_never">No, Thanks</string>
    <string name="playstore_not_found">Couldn\'t launch the market. Please open the PlayStore manually.</string>
    <string name="restore_categories">Restore</string>
    <string name="add_category">Add</string>
    <string name="restore_categories_yes">Yes, restore.</string>
    <string name="restore_categories_no">No, cancel.</string>
    <string name="restore_categories_title">Do you want to restore the default settings?</string>
    <string name="restore_categories_message">Careful! All saved data will be removed!</string>
    <string name="feed_title_not_found">No title found</string>
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>


    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="refresh_summary">How often should the feeds be refreshed</string>
    <string name="refresh_title_feed">Refresh Feeds</string>
    <string name="menu_recently">Recently</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_all">All</string>
    <string name="reset_categories">Reset Categories</string>
    <string name="selection_save">Save</string>
    <string name="selection_share">Share</string>
    <string name="shorten_links_title">Shorten links for sharing?</string>
    <string name="shorten_links_summary">Should the shared links be shortened? (e.g. www.thisismyverylongnewssite.com to www.adf.ly/newname)</string>
    <string name="feed_selection_remove">Remove</string>
    <string name="feed_selection_add">Add</string>
    <string name="mark_read">Mark as read</string>
    <string name="mark_unread">Mark as unread</string>
    <string name="menu_unread">Unread</string>
    <string name="multiple_columns">View with multiple columns</string>
    <string name="single_columns">View with a single column</string>
    <string name="category_name">Name of the category</string>
    <string name="select_all_context_list">Select all items</string>
    <string name="deselect_all_context_list">Remove selection</string>
    <string name="no_entries">No entries found.</string>
    <string name="is_loading">Looking for feeds to show</string>
    <string name="remove_old_entries_summary">Delete deprecated news?</string>
    <string name="remove_old_entries_title">Deprecated Entries</string>
    <string name="opml_url">Please enter the url or the content of a valid opml-file</string>
    <string name="navdrawer_settings">Settings</string>
    <string name="menu_delete_entry">Delete</string>
    <string name="not_valid_url_nor_opml_file">Sorry, but the entered text neither is a valid url nor contains valid content of an opml-file.</string>
    <string name="beta" translatable="false">BETA</string>
    <string name="choose_category_for_feeds">Choose a category</string>
    <string name="beta_version_disclaimer">This is a beta version. Do not rate the app based on this functionality.
        Please report bugs or suggestions instead!</string>
    <string name="feed_selection_assign">Select feeds to assign them to categories</string>
    <string name="assigning_feeds_title">Assigning Feeds</string>
    <string name="import_button">Import</string>
    <string name="enter_url_or_content_import">Please enter an url to an opml-file or the content of an opml-file</string>
    <string name="home_title">Home</string>
    <string name="favorite_title">Favorite</string>
    <string name="recent_title">Recent</string>
    <string name="unread_title">Unread</string>
    <string name="no_feeds_found">No Feeds found</string>
    <string name="no_browser_found">Sorry, no browser found. Please install a browser and try again!</string>
    <string name="category_feeds_fragment_title">%s: Feeds</string>
    <string name="category_modifier_fragment">Categories</string>
    <string name="category_selection_fragment_title">Categories</string>
    <string name="opml_assign_fragment_title">Assign Opml-Feeds</string>
    <string name="opml_import_fragment_title">Import Opml</string>
    <string name="pref_fragment_title">Preferences</string>


    <string name="thanks">Thank you!</string>
    <string name="exception">Oops! Something went wrong!</string>
    <string name="title_activity_news">NewsActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_opml">Opml</string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="title_activity_settings">SettingActivity</string>
    <string name="menu_opml">OPML</string>
    <string name="assign_menu_title">Assign</string>
    <string name="error_feed_loading">Couldn\'t load feed.</string>
    <string name="share_categories">Share categories</string>
    <string name="share_feeds">Share feeds</string>
</resources>