<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/entry_types"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_background_white"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/entry_type_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/ic_nav_home" />

            <TextView
                android:id="@+id/entry_type_text_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/menu_all" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/entry_type_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/ic_nav_favorite" />

            <TextView
                android:id="@+id/entry_type_text_fav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/menu_favorites" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/entry_type_recently"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/ic_nav_recently_used" />

            <TextView
                android:id="@+id/entry_type_text_recently"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/menu_recently" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/entry_type_unread"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/ic_nav_new" />

            <TextView
                android:id="@+id/entry_type_text_unread"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/menu_unread" />
        </LinearLayout>
    </LinearLayout>