<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/m_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:visibility="invisible" />

        <LinearLayout
            android:id="@+id/inputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:hint="@string/hint_add_entry" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:divider="?android:attr/listDivider"
                android:dividerPadding="12dp"
                android:orientation="horizontal"
                android:showDividers="middle">

                <Button
                    android:id="@+id/negative"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:drawable/list_selector_background"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:text="@string/cancel_menu" />

                <Button
                    android:id="@+id/positive"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:drawable/list_selector_background"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:text="@string/about_ok" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>